refactor: finalize code cleanup, documentation and sonar compliance